# rustyboy

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  manifest
.github/workflows/: publish-container.yml  rustyboy.yml
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/cpu/: cpu.rs  mod.rs  perf.rs  registers.rs  save_state.rs  sm83.rs
core/src/cpu/instructions/: arg.rs  decoder.rs  instructions.rs  mod.rs  opcode.rs  opcodes.rs  operand.rs
core/src/cpu/instructions/adc/: decoder.rs  opcode.rs
core/src/cpu/instructions/add/: decoder.rs
core/src/cpu/instructions/call/: decoder.rs  opcode.rs
core/src/cpu/instructions/cb/: decoder.rs
core/src/cpu/instructions/cp/: decoder.rs  opcode.rs
core/src/cpu/instructions/inc_dec/: decoder.rs
core/src/cpu/instructions/jump/: decoder.rs
core/src/cpu/instructions/ld/: decoder.rs  opcode.rs
core/src/cpu/instructions/ld16/: decoder.rs
core/src/cpu/instructions/logic/: mod.rs  opcode.rs
core/src/cpu/instructions/logic/and/: decoder.rs
core/src/cpu/instructions/logic/or/: decoder.rs
core/src/cpu/instructions/logic/xor/: decoder.rs
core/src/cpu/instructions/misc/: decoder.rs  opcode.rs
core/src/cpu/instructions/ret/: decoder.rs  opcode.rs
core/src/cpu/instructions/rotate/: decoder.rs
core/src/cpu/instructions/rst/: decoder.rs  opcode.rs
core/src/cpu/instructions/sbc/: decoder.rs
core/src/cpu/instructions/stack/: decoder.rs  opcode.rs
core/src/cpu/instructions/sub/: decoder.rs
core/src/cpu/operations/: cb.rs  misc.rs  sub.rs
core/src/cpu/peripheral/: apu.rs  bus.rs  joypad.rs  mod.rs  ppu.rs  serial.rs  timer.rs
core/src/memory/: cartridge.rs  fake.rs  memory.rs  mod.rs  rom.rs  streaming.rs
core/tests/: battery_save.rs  blargg_cpu_instrs.rs  blargg_dmg_sound.rs  blargg_instr_timing.rs  blargg_mem_timing.rs  blargg_oam_bug.rs  dkl2_lcdc_trace.rs  dmg_acid2.rs  mooneye_mbc1.rs  mooneye_oam_dma.rs  save_state.rs
core/tests/common/: mod.rs
deploy/unraid/: rustyboy.xml
docs/: apu-architecture.md  cpu-instruction-architecture.md  dispatch-refactor.md  display-dma-plan.md  perf-profiling.md  performance-roadmap.md  peripheral-bus-architecture.md  wave-channel-investigation.md
platform/display-viewer/: Cargo.toml
platform/display-viewer/src/: main.rs
platform/pico2w/: CLAUDE.md  Cargo.toml  README.md  SD_MODULE_NOTES.md  build.rs  memory.x
platform/pico2w/.cargo/: config.toml
platform/pico2w/src/: audio.rs  display.rs  flash_rom.rs  input.rs  lib.rs  main.rs  perf.rs  sd.rs  stack_probe.rs  xip_cartridge.rs
platform/pico2w/src/display/: fb.rs  hw.rs  mod.rs
platform/web/: Dockerfile  README.md
platform/web/client/: Cargo.toml
platform/web/client/src/: lib.rs
platform/web/client/static/: .gitignore  app.js  audio-processor.js  index.html  menu.js  style.css
platform/web/e2e/: package-lock.json  package.json  playwright.config.js  server.cjs
platform/web/e2e/fixtures/: app_test.html  menu_test.html  rustyboy_web_client_stub.js
platform/web/e2e/tests/: button_stuck.spec.js  menu.spec.js  traversal.spec.js
platform/web/server/: Cargo.toml
platform/web/server/migrations/: 0001_initial.sql  0002_revoked_tokens.sql
platform/web/server/src/: auth.rs  config.rs  db.rs  lib.rs  main.rs
platform/web/server/tests/: cf_access.rs  http.rs  security.rs
src/cpu/: cpu.rs  mod.rs  registers.rs  sm83.rs
src/cpu/instructions/: decoder.rs  instructions.rs  mod.rs  opcodes.rs  operand.rs
src/cpu/instructions/adc/: decoder.rs  opcode.rs
src/cpu/instructions/add/: decoder.rs  opcode.rs
src/cpu/instructions/call/: decoder.rs
src/cpu/instructions/cb/: decoder.rs  opcode.rs
src/cpu/instructions/cp/: decoder.rs  opcode.rs
src/cpu/instructions/inc_dec/: decoder.rs  opcode.rs
src/cpu/instructions/jump/: decoder.rs  opcode.rs
src/cpu/instructions/ld/: decoder.rs  opcode.rs
src/cpu/instructions/ld16/: decoder.rs  opcode.rs
src/cpu/instructions/logic/: decoder.rs  opcode.rs
src/cpu/instructions/logic/and/: decoder.rs
src/cpu/instructions/logic/or/: decoder.rs
src/cpu/instructions/logic/xor/: decoder.rs
src/cpu/instructions/misc/: decoder.rs  opcode.rs
src/cpu/instructions/ret/: decoder.rs
src/cpu/instructions/rotate/: decoder.rs  mod.rs  opcode.rs
src/cpu/instructions/rst/: decoder.rs
src/cpu/instructions/sbc/: decoder.rs  mod.rs  opcode.rs
src/cpu/instructions/stack/: decoder.rs
src/cpu/instructions/sub/: decoder.rs  opcode.rs
src/cpu/instructions/test/: mod.rs
src/cpu/opcodes/: adc.rs  add.rs  decoder.rs  mod.rs  opcode.rs  operand.rs  test_util.rs
src/cpu/opcodes/decoders/: adc.rs  add.rs  decoder.rs  mod.rs  opcode.rs
src/cpu/operations/: add.rs  inc_dec.rs  logic.rs  mod.rs  sub.rs
src/cpu/peripheral/: bus.rs  interrupt.rs  mod.rs  serial.rs  timer.rs
src/memory/: fake.rs  memory.rs  mod.rs  rom.rs
tests/: blargg_cpu_instrs.rs
