[workspace]
members = [
    "core",
    "platform/web/server",
    "platform/web/client",
    "platform/pico2w",
    "platform/display-viewer",
]
# Exclude embedded target from default workspace builds.
# Build pico2w from within platform/pico2w/ to pick up its .cargo/config.toml.
default-members = [
    "core",
    "platform/web/server",
    "platform/web/client",
]
resolver = "2"

[profile.dev]
opt-level = 1
debug = 2

[profile.release]
opt-level = "z"
lto = true
debug = 2
