[package]
name = "rustyboy-pico2w"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustyboy_pico2w"
path = "src/lib.rs"

[[bin]]
name = "rustyboy-pico2w"
path = "src/main.rs"

[features]
# Re-exported for display-viewer which depends on this crate.
std = []

# ---------------------------------------------------------------------------
# Cross-platform dependencies (compile on any target, including host tests)
# ---------------------------------------------------------------------------
[dependencies]
rustyboy-core = { path = "../../core" }
embedded-graphics = "0.8"

# ---------------------------------------------------------------------------
# Host (non-ARM) only — PNG export for display-viewer and tests
# ---------------------------------------------------------------------------
[target.'cfg(not(target_arch = "arm"))'.dependencies]
png = "0.17"

# ---------------------------------------------------------------------------
# Embedded (ARM bare-metal) only — excluded from host test builds
# ---------------------------------------------------------------------------
[target.'cfg(target_arch = "arm")'.dependencies]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
    "rp235xa",
    "time-driver",
    "defmt",
    "critical-section-impl",
    "binary-info",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
rp-pac = { git = "https://github.com/embassy-rs/rp-pac", rev = "c2e27609b021c444f634673155318977d7f0bdf6" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

embedded-alloc = "0.5"
embedded-sdmmc = "0.9.0"
mipidsi = "0.8"
display-interface-spi = "0.5"
embedded-hal-bus = "0.1"
