[package]
name = "rustyboy-web-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustyboy-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
