[package]
name = "rustyboy-web-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustyboy_web_server"
path = "src/lib.rs"

[[bin]]
name = "rustyboy-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
time = "0.3"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
base64 = "0.22"
